# django-template

./: .gitignore  docker-compose.yml  dockerfile  pyproject.toml  start.sh
proj_name/config/: urls.py
proj_name/config/settings/: _base.py  prod.py
proj_name/main_app_name/: apps.py  urls.py
proj_name/main_app_name/core/constants/strings/: env_strings.py
proj_name/main_app_name/core/decorators/: paging_decorator.py
proj_name/main_app_name/core/utils/: styler_utils.py
proj_name/main_app_name/dtos/general/: paging_dto.py
proj_name/main_app_name/dtos/request_dtos/: sample_request_dtos.py
proj_name/main_app_name/dtos/responses/: sample_response_dto.py
proj_name/main_app_name/models/: managers.py  models.py
proj_name/main_app_name/views/: base_views.py
