[project]
name = "django-template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=45.0.5",
    "django>=4.2.23",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "numpy>=2.0.2",
    "pymysql>=1.1.1",
    "requests>=2.32.4",
]
